* type=address-merger | bugfix - do not merger address objects if tag count of planned merged object exceeds PAN-OS limit of 64 tag members
* type=address-merger | bugfix for removing tag objects from upper level, if adr merged objects are using them and tag is also available at address level
* bugfix for argument 'location=shared:excludemaindg' on FW config file

GENERAL:
* Class VirtualSystem/SharedGatewayStore | better handling of version variable


2.1.18 (20230920)
BUGFIX:
* type=address/service 'actions=move:shared,skipIfConflict' | bugfix as variable $findSubSystem was not declared for targetlocation 'shared'


2.1.17 (20230920)
UTIL:
* type=certificate | extend to TemplateStack
* introduce class SharedGatewayStore | extend different classes to support SharedGateway
* type=zone | extend with SharedGateway
* type=rule | extend with SharedGateway
* type=service | improvement for SharedGateway - class VirtualSystem
* develop script "shared_gateway.php" | introduction
* type=address in=api://192.168.55.129 'actions=combine-addressgroups:{NEW_GROUP_NAME},true' 'filter=(name regex /{FILTER}/)'
* type=gcp actions=validation | introduction of new action
* type=gcp actions=image-validation | introduction of new action
* type=device | extend to display for FW config, per default also all sharedgateways in additional to vsys

BUGFIX:
* type=ssh-connector in=admin@MGMT-IP setcommand-file=set-commands.txt | bugfix to correctly send set commands

GENERAL:
* update App-ID version to: 8756-8298


2.1.16  (20230908)
UTIL:
* type=address | new 'filter=(name same.as.region.predefined)'
* class UTIL | extend if API mode - with App-id/AV/WF/Threat version info
* type=address | introduce 'filter=(tag is.set)'
* type=xml-issue | extend with rule tag object validation for twice set the same tag object
* introduce GroupTagRuleContainer to all Rule classes

BUGFIX:
* class Sub | bugfix for default-securiy-rules | if partial config is already available