@@ -23,6 +23,7 @@ BUGFIX:
 * type=address-merger | bugfix - do not merger address objects if tag count of planned merged object exceeds PAN-OS limit of 64 tag members
 * type=address-merger | bugfix for removing tag objects from upper level, if adr merged objects are using them and tag is also available at address level
 * bugfix for argument 'location=shared:excludemaindg' on FW config file
+* type=schedule | bugfix actions=replacewithobject:OBJECTNAME
 
 GENERAL:
 * Class VirtualSystem/SharedGatewayStore | better handling of version variable
